[gd_scene load_steps=6 format=3 uid="uid://l211bcssnggm"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/GrappleHook.gd" id="1_7bqvv"]
[ext_resource type="Texture2D" uid="uid://bhx21vw6kwujn" path="res://Assets/Images/Objects/FunctionalProps/Hook&Cover.png" id="2_hyxy6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sw17c"]
size = Vector2(46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_26uca"]
atlas = ExtResource("2_hyxy6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_77iwy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26uca")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GrappleHook" type="Node2D" groups=["hooks"]]
script = ExtResource("1_7bqvv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_sw17c")

[node name="HookSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_77iwy")

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
